Footer sidebar overlap issue temp fix

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -386,7 +386,7 @@ li.user-info .dropdown-menu li {
   width: 280px;
   min-height: 100%;
   overflow: visible;
-  position: fixed;
+  position: absolute;
   z-index: 990;
   padding-top: 30px;
   opacity: 1;
